# creative-tagger-sdk

./: .gitignore  README.md  pyproject.toml
src/creative_tagger/: __init__.py  client.py
