[project]
name = "creative-tagger"
version = "0.1.0"
description = "Python SDK for Creative Tagger — structured creative intelligence API"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Stephen Lavender"}]
keywords = ["creative", "taxonomy", "ads", "marketing", "creative-intelligence", "naming-conventions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creative_tagger"]
